apply ide suggestions